force-app/main/default/objects/BGR_Outputs__c/BGR_Outputs__c.object-meta.xml
<CustomObject>
    <label>BGR Outputs</label>
    <nameField>
        <label>BGR Outputs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>