force-app/main/default/objects/BGR_Outputs__c/fields/Adder_Lead_Time_30__c.field-meta.xml
<CustomField>
    <fullName>Adder_Lead_Time_30__c</fullName>
    <label>Adder_Lead Time 30</label>
    <length>10</length>
    <type>Text</type>
</CustomField>