force-app/main/default/objects/BGR_Outputs__c/fields/ATEX__c.field-meta.xml
<CustomField>
    <fullName>ATEX__c</fullName>
    <label>ATEX</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>