force-app/main/default/objects/BGR_Outputs__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>Base</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>