force-app/main/default/objects/BGR_Outputs__c/fields/Base_Lead_Time_20__c.field-meta.xml
<CustomField>
    <fullName>Base_Lead_Time_20__c</fullName>
    <label>Base_Lead Time 20</label>
    <length>10</length>
    <type>Text</type>
</CustomField>