force-app/main/default/objects/BGR_Outputs__c/fields/BGR_Outputs_Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>BGR_Outputs_Relation_Field__c</fullName>
    <label>BGR Outputs Relation Field</label>
    <referenceTo>BGR__c</referenceTo>
    <relationshipLabel>BGR Outputs</relationshipLabel>
    <relationshipName>BGR_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>