force-app/main/default/objects/BGR_Outputs__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>