force-app/main/default/objects/BGR_Outputs__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <label>CSA</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>