force-app/main/default/objects/BGR_Outputs__c/fields/CUTR__c.field-meta.xml
<CustomField>
    <fullName>CUTR__c</fullName>
    <label>CUTR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>