force-app/main/default/objects/BGR_Outputs__c/fields/MatlSource__c.field-meta.xml
<CustomField>
    <fullName>MatlSource__c</fullName>
    <label>PMatlSource</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>