force-app/main/default/objects/BGR_Outputs__c/fields/OA01__c.field-meta.xml
<CustomField>
    <fullName>OA01__c</fullName>
    <label>OA01</label>
    <length>100</length>
    <type>Text</type>
</CustomField>