force-app/main/default/objects/BGR_Outputs__c/fields/OA02__c.field-meta.xml
<CustomField>
    <fullName>OA02__c</fullName>
    <label>OA02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>