force-app/main/default/objects/BGR_Outputs__c/fields/OA_Override__c.field-meta.xml
<CustomField>
    <fullName>OA_Override__c</fullName>
    <label>OA Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>