force-app/main/default/objects/BGR_Outputs__c/fields/OB010__c.field-meta.xml
<CustomField>
    <fullName>OB010__c</fullName>
    <label>OB010</label>
    <length>100</length>
    <type>Text</type>
</CustomField>