force-app/main/default/objects/BGR_Outputs__c/fields/OB310__c.field-meta.xml
<CustomField>
    <fullName>OB310__c</fullName>
    <label>OB310</label>
    <length>100</length>
    <type>Text</type>
</CustomField>