force-app/main/default/objects/BGR_Outputs__c/fields/OW210__c.field-meta.xml
<CustomField>
    <fullName>OW210__c</fullName>
    <label>OW210</label>
    <length>100</length>
    <type>Text</type>
</CustomField>