force-app/main/default/objects/BGR_Outputs__c/fields/OW220__c.field-meta.xml
<CustomField>
    <fullName>OW220__c</fullName>
    <label>OW220</label>
    <length>100</length>
    <type>Text</type>
</CustomField>