force-app/main/default/objects/BGR_Outputs__c/fields/OW310__c.field-meta.xml
<CustomField>
    <fullName>OW310__c</fullName>
    <label>OW310</label>
    <length>100</length>
    <type>Text</type>
</CustomField>