force-app/main/default/objects/BGR_Outputs__c/fields/PMI__c.field-meta.xml
<CustomField>
    <fullName>PMI__c</fullName>
    <label>PMI</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>