force-app/main/default/objects/BGR_Outputs__c/fields/Price_ATEX__c.field-meta.xml
<CustomField>
    <fullName>Price_ATEX__c</fullName>
    <label>Price_ATEX</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>