force-app/main/default/objects/BGR_Outputs__c/fields/Price_CSA__c.field-meta.xml
<CustomField>
    <fullName>Price_CSA__c</fullName>
    <label>Price_CSA</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>