force-app/main/default/objects/BGR_Outputs__c/fields/Price_SoftGoods__c.field-meta.xml
<CustomField>
    <fullName>Price_SoftGoods__c</fullName>
    <label>Price_SoftGoods</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>