force-app/main/default/objects/BGR_Outputs__c/fields/ShellTest__c.field-meta.xml
<CustomField>
    <fullName>ShellTest__c</fullName>
    <label>ShellTest</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>