force-app/main/default/objects/BGR_Outputs__c/fields/SITE_30_INSIDE_OVERRIDE__c.field-meta.xml
<CustomField>
    <fullName>SITE_30_INSIDE_OVERRIDE__c</fullName>
    <label>SITE 30 INSIDE OVERRIDE</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>