force-app/main/default/objects/BGR_Outputs__c/fields/SoftGoods__c.field-meta.xml
<CustomField>
    <fullName>SoftGoods__c</fullName>
    <label>SoftGoods</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>