force-app/main/default/objects/BGR_Outputs__c/fields/XRAY__c.field-meta.xml
<CustomField>
    <fullName>XRAY__c</fullName>
    <label>XRAY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>